--- a/src/main/resources/org/example/runme/hello-view.fxml
+++ b/src/main/resources/org/example/runme/hello-view.fxml
@@ -13,4 +13,6 @@
 
   <Label fx:id="welcomeText"/>
   <Button text="Hello!" onAction="#onHelloButtonClick"/>
+
+    <Button text="Hello2!" onAction="#onHelloButtonClick2"/>
 </VBox>
