Made it a calculator.

--- a/src/main/resources/org/example/runme/hello-view.fxml
+++ b/src/main/resources/org/example/runme/hello-view.fxml
@@ -1,18 +1,42 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.geometry.Insets?>
+<?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.layout.VBox?>
 
-<?import javafx.scene.control.Button?>
-<VBox alignment="CENTER" spacing="20.0" xmlns:fx="http://javafx.com/fxml"
+<?import javafx.scene.layout.HBox?>
+<VBox alignment="CENTER" spacing="10.0" xmlns:fx="http://javafx.com/fxml"
       fx:controller="org.example.runme.HelloController">
   <padding>
     <Insets bottom="20.0" left="20.0" right="20.0" top="20.0"/>
   </padding>
 
-  <Label fx:id="welcomeText"/>
-  <Button text="Hello!" onAction="#onHelloButtonClick"/>
-
-    <Button text="Hello2!" onAction="#onHelloButtonClick2"/>
+  <Label fx:id="display" style="-fx-font-size: 18px;"/>
+  <VBox spacing="5.0">
+    <HBox spacing="5.0">
+      <Button text="1" onAction="#appendNumber"/>
+      <Button text="2" onAction="#appendNumber"/>
+      <Button text="3" onAction="#appendNumber"/>
+      <Button text="+" onAction="#appendOperator"/>
+    </HBox>
+    <HBox spacing="5.0">
+      <Button text="4" onAction="#appendNumber"/>
+      <Button text="5" onAction="#appendNumber"/>
+      <Button text="6" onAction="#appendNumber"/>
+      <Button text="-" onAction="#appendOperator"/>
+    </HBox>
+    <HBox spacing="5.0">
+      <Button text="7" onAction="#appendNumber"/>
+      <Button text="8" onAction="#appendNumber"/>
+      <Button text="9" onAction="#appendNumber"/>
+      <Button text="*" onAction="#appendOperator"/>
+    </HBox>
+    <HBox spacing="5.0">
+      <Button text="C" onAction="#clear"/>
+      <Button text="0" onAction="#appendNumber"/>
+      <Button text="=" onAction="#calculate"/>
+      <Button text="/" onAction="#appendOperator"/>
+    </HBox>
+  </VBox>
 </VBox>
